recursion.lessons.recursion.tree.Tree.scala.error
Tree:21: error: not found: value cap
	setCap(cap);
               ^